[package]
name = "tucano"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Unified facade for the Tucano ecosystem (algorithmic trading)"
repository = "https://github.com/brbtavares/tucano"
documentation = "https://docs.rs/tucano"
readme = "../README.md"
keywords = ["trading","finance","rust"]
categories = ["finance","algorithms"]
authors = ["Bruno Tavares <brbtavares@users.noreply.github.com>"]

[dependencies]
# Re-export targets
"tucano-core" = { workspace = true }
"tucano-markets" = { workspace = true }
"tucano-data" = { workspace = true }
"tucano-execution" = { workspace = true }
"tucano-risk" = { workspace = true }
"tucano-trader" = { workspace = true }
"tucano-strategies" = { workspace = true }
"tucano-analytics" = { workspace = true }
"tucano-integration" = { workspace = true }
[features]
## Aggregator feature for convenience
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
