[package]
name = "toucan"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Unified facade for the Toucan ecosystem (algorithmic trading)"
repository = "https://github.com/brbtavares/toucan"
documentation = "https://docs.rs/toucan"
readme = "../README.md"
keywords = ["trading","finance","rust"]
categories = ["finance","algorithms"]
authors = ["Bruno Tavares <brbtavares@users.noreply.github.com>"]

[dependencies]
# Re-export targets
"toucan-core" = { workspace = true }
"toucan-data" = { workspace = true }
"toucan-execution" = { workspace = true }
"toucan-risk" = { workspace = true }
"toucan-trader" = { workspace = true }
"toucan-strategies" = { workspace = true }
"toucan-analytics" = { workspace = true }
"toucan-integration" = { workspace = true }
[features]
## Aggregator feature for convenience
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
