[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# TUI
ratatui = "0.29"
clap = { version = "4.5", features = ["derive"] }

# CLI e estruturas
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Sistema de arquivos e processos
walkdir = "2.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Utilitários
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Para parsing de Cargo.toml
cargo_metadata = "0.18"
