[package]
name = "binance-data-stream"
version = "0.1.0"
edition = "2021"
authors = ["Toucan Contributors"]
description = "Real-time Binance data streaming TUI using Toucan framework"
license = "MIT OR Apache-2.0"

[[bin]]
name = "binance-data-stream"
path = "src/main.rs"

[dependencies]
# Toucan ecosystem
data = { workspace = true }
integration = { workspace = true }
markets = { workspace = true }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
