[package]
name = "ratatui-data-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono.workspace = true
crossterm = "0.29.0"
ratatui = "0.29.0"
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

# Toucan ecosystem
data = { workspace = true }
integration = { workspace = true }
markets = { workspace = true }
tracing-subscriber.workspace = true
futures.workspace = true
